--- a/scss/modal/modal.scss
+++ b/scss/modal/modal.scss
@@ -13,12 +13,108 @@
     .thank_title {
         text-align: center;
         margin-bottom: 10px;
-        color: #C1A790;
+        color: #000;
         font: 1.75rem "800";
     }
     .thank_text {
         text-align: center;
         font: 1rem/115% "400";
+    }
+}
+
+.form_modal {
+    max-width: 345px;
+    margin: 0 auto;
+    background: #fff;
+    position: relative;
+    border-radius: 15px;
+    padding: 45px 20px;
+    .admission_title {
+        text-align: left;
+        margin-bottom: 15px;
+        color: #000;
+        font: 1.55rem "800";
+    }
+    .admission_text {
+        text-align: left;
+        margin-bottom: 30px;
+        font: .8rem/115% "400";
+    }
+    form {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        input {
+            color: #000;
+            padding: 15px;
+            appearance: none;
+            outline: none;
+            font: 1rem "400";
+            border: 1px solid #000000;
+            border-radius: 3px;
+        }
+        textarea {
+            color: #000;
+            height: 105px;
+            padding: 15px;
+            appearance: none;
+            outline: none;
+            font: 1rem "400";
+            border: 1px solid #000000;
+            border-radius: 3px;
+        }
+        button {
+            border: none;
+            padding: 15px 10px;
+            text-align: center;
+            color: #fff;
+            background: #000;
+            border-radius: 3px;
+            font: 1.25rem "800";
+        }
+    }
+}
+
+.admission_modal {
+    max-width: 345px;
+    margin: 0 auto;
+    background: #fff;
+    position: relative;
+    border-radius: 15px;
+    padding: 45px 20px;
+    .admission_title {
+        text-align: left;
+        margin-bottom: 5px;
+        color: #000;
+        font: 1.55rem "800";
+    }
+    .admission_text {
+        text-align: left;
+        margin-bottom: 30px;
+        font: .8rem/115% "400";
+    }
+    form {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        input {
+            color: #000;
+            padding: 15px;
+            appearance: none;
+            outline: none;
+            font: 1rem "400";
+            border: 1px solid #000000;
+            border-radius: 3px;
+        }
+        button {
+            border: none;
+            padding: 15px 10px;
+            text-align: center;
+            color: #fff;
+            background: #000;
+            border-radius: 3px;
+            font: 1.25rem "800";
+        }
     }
 }
 
@@ -328,6 +424,54 @@
                     color: #000;
                 }
             }
+        }
+    }
+}
+
+.reviews_modals {
+    background: #fff;
+    position: relative;
+    padding: 50px 0;
+    max-width: 400px;
+    overflow: hidden;
+    margin: 0 auto;
+    .swiper-slide {
+        width: 100%!important;
+    }
+    .item_slider_3 {
+        width: 90%;
+        margin: 0 auto;
+        overflow-x: hidden;
+        position: relative;
+        padding-bottom: 50px;
+    }
+    .swiper-button-next, .swiper-button-prev {
+        top: 46%!important;
+    }
+    .swiper-pagination-bullet {
+        height: 15px;
+        width: 15px;
+        opacity: 1;
+        background: rgba(0, 0, 0, .5);
+    }
+    .swiper-pagination-bullet-active {
+        background: rgba(0, 0, 0, 0.9);
+    }
+    .swiper-pagination {
+        bottom: -2px!important;
+    }
+    .swiper-button-next:after, .swiper-button-prev:after {
+        color:rgba(90, 90, 90, 0.5);
+    }
+    .item_img {
+        position: relative;
+        overflow: hidden;
+        height: 450px;
+        img {
+            max-width: 100%;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
         }
     }
 }
